--- a/help/pt/%2A%2A.md
+++ b/help/pt/%2A%2A.md
@@ -7,3 +7,9 @@ This may return complex results for real inputs.  Use `realsqrt`,
 possible.
 
 See also: `power`, `^`, `.**`, `.^`, `realpow`, `realsqrt`, `cbrt`, `nthroot`.
+
+### References
+
+* https://www.mathworks.com/help/matlab/ref/power.html
+* https://mathworld.wolfram.com/Power.html
+* https://en.wikipedia.org/wiki/Exponentiation
