--- a/help/pt/%2A.md
+++ b/help/pt/%2A.md
@@ -3,3 +3,9 @@
 Multiplication operator.
 
 See also: `mtimes`, `.*`.
+
+### References
+
+* https://www.mathworks.com/help/matlab/ref/mtimes.html
+* https://mathworld.wolfram.com/MatrixMultiplication.html
+* https://en.wikipedia.org/wiki/Matrix_multiplication
