--- a/help/pt/%2E%5C.md
+++ b/help/pt/%2E%5C.md
@@ -3,3 +3,8 @@
 Element-by-element left division operator.
 
 See also: `ldivide`, `\`, `mldivide`, `./`.
+
+### References
+
+* https://www.mathworks.com/help/matlab/ref/ldivide.html
+* https://www.mathworks.com/help/matlab/ref/mldivide.html
