--- a/help/pt/%2B%2B.md
+++ b/help/pt/%2B%2B.md
@@ -6,3 +6,7 @@ Add 1 to existing value of variable.  As in C language, may be applied as a
 prefix (`++x`) or postfix (`x++`) operator.
 
 See also: `-`.
+
+## References
+
+* https://en.wikipedia.org/wiki/Increment_and_decrement_operators
