--- a/help/pt/%2B.md
+++ b/help/pt/%2B.md
@@ -3,3 +3,9 @@
 Addition operator.
 
 See also: `plus`.
+
+### References
+
+* https://www.mathworks.com/help/matlab/ref/plus.html
+* https://mathworld.wolfram.com/Addition.html
+* https://en.wikipedia.org/wiki/Addition
