--- a/help/pt/%2D%2D.md
+++ b/help/pt/%2D%2D.md
@@ -7,3 +7,7 @@ Subtract 1 from existing value of variable.  As in C language, may be
 applied as a prefix (`--x`) or postfix (`x--`) operator.
 
 See also: `++`.
+
+## References
+
+* https://en.wikipedia.org/wiki/Increment_and_decrement_operators
