--- a/help/pt/%2D.md
+++ b/help/pt/%2D.md
@@ -3,3 +3,12 @@
 Subtraction or unary negation operator.
 
 See also: `minus`.
+
+### References
+
+* https://www.mathworks.com/help/matlab/ref/minus.html
+* https://mathworld.wolfram.com/Minus.html
+* https://mathworld.wolfram.com/Subtraction.html
+* https://mathworld.wolfram.com/Difference.html
+* https://en.wikipedia.org/wiki/Plus_and_minus_signs
+* https://en.wikipedia.org/wiki/Subtraction
