--- a/help/pt/%2E%2A.md
+++ b/help/pt/%2E%2A.md
@@ -1,5 +1,14 @@
-* .\*
+* `.*`
 
 Element-by-element multiplication operator.
 
 See also: `times`, `*`.
+
+### References
+
+* https://www.mathworks.com/help/matlab/ref/times.htm
+* https://mathworld.wolfram.com/Multiplication.html
+* https://mathworld.wolfram.com/Times.html
+* https://en.wikipedia.org/wiki/Multiplication
+* https://en.wikipedia.org/wiki/Product_(mathematics)
+* https://en.wikipedia.org/wiki/Multiplication_sign
