--- a/help/pt/%2E%2F.md
+++ b/help/pt/%2E%2F.md
@@ -3,3 +3,7 @@
 Element-by-element right division operator.
 
 See also: `rdivide`, `/`, `mrdivide`, `.\`.
+
+### References
+
+* https://www.mathworks.com/help/matlab/ref/rdivide.html
