--- a/help/en/%2A.md
+++ b/help/en/%2A.md
@@ -1,12 +1,12 @@
 * `*`
 
-Operador de multiplicação.
+Multiplication operator.
 
-Veja também: `mtimes`, `.*`.
+See also: `mtimes`, `.*`.
 
-### Referências
+### References
 
 * https://www.mathworks.com/help/matlab/ref/mtimes.html
 * https://octave.sourceforge.io/operators.html
 * https://mathworld.wolfram.com/MatrixMultiplication.html
-* https://pt.wikipedia.org/wiki/Produto_de_matrizes
+* https://en.wikipedia.org/wiki/Matrix_multiplication
