--- a/help/pt/%2B%2B.md
+++ b/help/pt/%2B%2B.md
@@ -5,4 +5,4 @@ Operador de incremento.
 Adiciona 1 ao valor existente da variável. Assim como na linguagem C, pode ser aplicado como
 pré-fixado (`++x`) ou pós-fixado (`x++`).
 
-Veja também: `-`.
+Veja também: `--`.
