--- a/help/en/%2B%2B.md
+++ b/help/en/%2B%2B.md
@@ -5,7 +5,7 @@ Increment operator.
 Add 1 to existing value of variable.  As in C language, may be applied as a
 prefix (`++x`) or postfix (`x++`) operator.
 
-See also: `-`.
+See also: `--`.
 
 ## References
 
