--- a/help/es/%27.md
+++ b/help/es/%27.md
@@ -1,12 +1,12 @@
 * `'`
 
-Operador de transposición matricial o delimitador de cadena.
+Operador de transposición matricial o delimitador de string.
 
 Para matrices complejas, calcula el conjugado transpuesto (Hermitiano).
 
 El carácter de comilla simple también se puede utilizar para delimitar
 cadenas. Las secuencias de escape dentro de cadenas entre comillas simples
-no se expanden. Es decir, `'\n'` es una cadena de 2 caracteres `'\'` y `'n'`
+no se expanden. Es decir, `'\n'` es una string de 2 caracteres `'\'` y `'n'`
 en lugar de `"\n"` que es un solo carácter que representa una nueva línea.
 
 Véase también: `ctranspose`, `.'`, `"`.
